fix white space on firefox

--- a/ota-plus-web/app/reactapp/css/pages.scss
+++ b/ota-plus-web/app/reactapp/css/pages.scss
@@ -3369,6 +3369,7 @@
                     color: #4b4b4b;
                     font-weight: bold;
                     font-size: 20px;
+                    white-space: pre;
                 }
 
                 .text {
